k8s/test-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-cluster
  labels:
    name: test-cluster
    purpose: testing
